--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,10 @@ body {
     min-height: 100%;
 }
 
+.container.narrow {
+    max-width: 56rem;    
+}
+
 .navbar {
     position: relative
     padding: 0.5rem;
