--- a/styles/album.css
+++ b/styles/album.css
@@ -78,9 +78,12 @@ album-view-details .album-view-title {
      background-color: rgb(210, 40, 123);
  }
  
- .album-song-button span {
+.album-song-button span {
      line-height: 28px;
+     margin: 0px;
+     padding: 1px
  }
+
 
 @media (max-width: 640px) and (min-width: 320px) {
     .album-view-details {
